# openslaq

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  CLAUDE.md  README.md  app.json  create-dms-for-browser-user.ts  create-dms-stress-tester.ts  create-dms.ts  docker-compose.yml  livekit.yaml  package.json  stress-dms.ts
.claude/: settings.json
apps/api/: Dockerfile  openapi.json  package.json
apps/cli/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/docs/: Caddyfile  Dockerfile  astro.config.mjs  package.json  tsconfig.json
apps/mobile/: .detoxrc.js  app.config.ts  app.json  eslint.config.mjs  jest.config.js  jest.setup.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
apps/web/: Dockerfile  index.html  package.json  vite.config.ts  vitest.config.ts
apps/web-e2e/: package.json  playwright.config.ts  tsconfig.json
apps/web-e2e-old/: package.json  playwright.config.ts
docs/: README.md  backlog.md  notification-flow.md
docs/active/: backlog-huddle-scaling.md  backlog-integrations.md  backlog-lc.md  backlog-mobile.md  backlog-refactors.md  backlog-ts-sdk.md  bugs-mobile-qa.md  design-huddle-cli.md
docs/archive/: backlog-mobile-2026-02.md  backlog-slaq-parity-2026-02.md
scripts/: create-github-app.ts  dtx.ts  generate-icons.ts  pretypecheck.ts  release-cli.sh  release-desktop.sh  screenshot.sh  worktree-new.ts  worktree-rm.ts
(+1047 files in other folders)
