[package]
name = "openslaq-desktop"
version = "0.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri-plugin-localhost = "2.3.2"
tiny_http = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
codegen-units = 1
